fix: the grid spacing idk man what is a css

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
 	align: center;
 	justify-content: center;
 	display: grid;
+	gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 }
 
